Version 5.4.0 (TBD)
    Added all table menu items to the UI registry, so they can be used by name in other menus #TINY-4866
    Changed `mceInsertTable` command and `insertTable` API method to take optional header rows and columns arguments #TINY-6012
Version 5.3.1 (2020-05-27)
    Fixed the image upload error alert also incorrectly closing the image dialog #TINY-6020
    Fixed editor content scrolling incorrectly on focus in Firefox by reverting default content CSS html and body heights added in 5.3.0 #TINY-6019
Version 5.3.0 (2020-05-21)
    Added html and body height styles to the default oxide content CSS #TINY-5978
    Added `uploadUri` and `blobInfo` to the data returned by `editor.uploadImages()` #TINY-4579
    Added a new function to the `BlobCache` API to lookup a blob based on the base64 data and mime type #TINY-5988
    Added the ability to search and replace within a selection #TINY-4549
    Added the ability to set the list start position for ordered lists and added new `lists` context menu item #TINY-3915
    Added `icon` as an optional config option to the toggle menu item API #TINY-3345
    Added `auto` mode for `toolbar_location` which positions the toolbar and menu bar at the bottom if there is no space at the top #TINY-3161
    Changed the default `toolbar_location` to `auto` #TINY-3161
    Changed toggle menu items and choice menu items to have a dedicated icon with the checkmark displayed on the far right side of the menu item #TINY-3345
    Changed the `link`, `image`, and `paste` plugins to use Promises to reduce the bundle size #TINY-4710
    Changed the default icons to be lazy loaded during initialization #TINY-4729
    Changed the parsing of content so base64 encoded urls are converted to blob urls #TINY-4727
    Changed context toolbars so they concatenate when more than one is suitable for the current selection #TINY-4495